// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter render counter  1`] = `null`;

exports[`Counter render counter ICounterSize.medium 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 9,
        },
      ]
    }
  >
    1
  </Text>
</View>
`;

exports[`Counter render counter ICounterSize.small 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 9,
        "height": 18,
        "justifyContent": "center",
        "minWidth": 18,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 18,
          "lineHeight": 24,
        },
        Object {
          "color": "#FFF",
          "paddingHorizontal": 9,
        },
      ]
    }
  >
    12
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.destructive 1`] = `null`;

exports[`Counter render counter ICounterTypes.disabled 1`] = `null`;

exports[`Counter render counter ICounterTypes.primary 1`] = `null`;

exports[`Counter render counter ICounterTypes.secondary 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 12,
        "height": 24,
        "justifyContent": "center",
        "minWidth": 24,
        "position": "absolute",
        "zIndex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 24,
          "lineHeight": 30,
        },
        Object {
          "color": "#2B78EE",
          "paddingHorizontal": 9,
        },
      ]
    }
  >
    99+
  </Text>
</View>
`;

exports[`Counter render counter ICounterTypes.tertiary 1`] = `null`;

exports[`Counter render counter style 1`] = `null`;
